--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/AccessKeys/
 
 # Ignore application configuration
 /config/application.yml
